# someMLworks

./: .gitignore  README.md  a perceptron.ipynb  batch_GD.ipynb  gatesOnThreshold.ipynb  linearRegressionHousingPrice.ipynb  mini_batch_GD.ipynb  multipleRegressionForHousingPrice.ipynb  rnn for dogs.ipynb  stochastic_GD.ipynb  xor_problem.ipynb
.ipynb_checkpoints/: AND_gate-checkpoint.ipynb
B.Sc.CSIT Neural Networks/: readMe.md
B.Sc.CSIT Neural Networks/question_paper/: 2078.txt  model_question.txt
FPL_analysis/: analysis_gw_26.ipynb  player.json  requirements.txt
GNN/: experiment.ipynb  pyproject.toml
agents/: README.md  main.py  pyproject.toml
contract-detector/: README.md  main.py  pyproject.toml
contract-detector/docs/: contradict.md  inconsistency_spec.md
lang_classify/: main.py  pyproject.toml
lang_work/: .gitignore  google_models.txt  main.py  pyproject.toml  test.ipynb
