[project]
name = "lang-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "jq>=1.11.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "openai>=2.24.0",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.1",
    "unstructured>=0.21.5",
]
